<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:menuCategory="container">
    <item
        android:id="@+id/overview_item"
        android:title="@string/overview"
    />
    <item
        android:id="@+id/balance_item"
        android:title="@string/balance"
        />
    <item
        android:id="@+id/budgets_item"
        android:title="@string/budgets"
        />
        <item
            android:id="@+id/reports_item"
            android:title="@string/reports"
            />
    <item
        android:id="@+id/categories"
        android:title="@string/categories"
        />

    </group>
    <group android:menuCategory="container">

        <item

            android:id="@+id/settings_item"
            android:title="@string/settings"

            />
    </group>

</menu>